--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
+    "vuex": "^2.3.1",
     "vue-router": "^2.3.1",
     "jsonp": "^0.2.1",
     "axios": "^0.16.2"
