--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.16.2"
   },
   "devDependencies": {
+    "create-keyframe-animation": "^0.1.0",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
