--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vuex": "^2.3.1",
     "vue-router": "^2.3.1",
     "jsonp": "^0.2.1",
+    "good-storage": "^1.0.1",
     "axios": "^0.16.2"
   },
   "devDependencies": {
